Moved New Shop Form to unique page /newshop

--- a/www/frontend/src/app/navbar/navbar.component.html
+++ b/www/frontend/src/app/navbar/navbar.component.html
@@ -11,6 +11,9 @@
         <a class="nav-link" href="#review">Write a review</a>
       </li> -->
       <li class="nav-item">
+        <a class="nav-link" href="/addshop">Add Shop</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/shops">View Shops</a>
       </li>
       <li *ngIf="loggedIn" class="nav-item" (click)="logout()">
